fix(docs): fix scroll jumpnav to the active title

--- a/docs/src/components/css/style.css
+++ b/docs/src/components/css/style.css
@@ -25,6 +25,14 @@
   scroll-behavior: smooth;
 }
 
+.scroll-y {
+  overflow-y: scroll;
+}
+
+.inherit-height {
+  height:inherit;
+}
+
 .list {
   margin-top: var(--spacing-m);
 }
